# i13c-lang

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: hello.i13c
scripts/: i13c
src/data/: hello.i13c
src/i13c/: ast.py  diag.py  elf.py  enc.py  err.py  ir.py  ld.py  lex.py  low.py  main.py  par.py  parse.py  res.py  sem.py  src.py  sym.py
src/i13c/cli/: __init__.py  core.py
src/i13c/core/: dag.py  diagnostics.py  graph.py  mapping.py  table.py
src/i13c/encoding/: __init__.py  addr.py  bits.py  core.py  ctrl.py  intel.py  jump.py  kind.py  math.py  move.py  stack.py
src/i13c/graph/: artifacts.py  nodes.py
src/i13c/llvm/: build.py  graph.py
src/i13c/lowering/: bind.py  build.py  graph.py  instructions.py  linear.py  nodes.py
src/i13c/sem/: __init__.py  analysis.py  asm.py  build.py  callable.py  callgraphs.py  callsite.py  core.py  dag.py  entrypoint.py  flowgraphs.py  flows.py  function.py  generator.py  graph.py  ids.py  infra.py  literal.py  live.py  model.py  nodes.py  rel.py  resolve.py  snippet.py  syntax.py  terminal.py  types.py
src/i13c/semantic/: __init__.py  core.py  dag.py  graph.py  model.py  syntax.py
src/i13c/syntax/: lexing.py  parsing.py  source.py  tree.py
src/tests/: elf.py  enc.py  hello.py  ld.py  lex.py  low.py  lowering.py  par.py  parse.py  sem.py
src/tests/core/: dag.py  diagnostics.py  graph.py  table.py
src/tests/encoding/: __init__.py  add.py  addr.py  bits.py  bswap.py  call.py  ctrl.py  elf.py  jump.py  kind.py  lea.py  math.py  mov.py  move.py  nop.py  shl.py  syscall.py
src/tests/llvm/: __init__.py  callsites.py  graph.py  snippets.py
src/tests/sem/: __init__.py  (+17 more)
(+652 files in other folders)
