[project]
name = "i13c-lang"
version = "0.0.0"
description = ""
authors = [{ name = "Adrian Macal", email = "adma@amacal.pl" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["click (>=8.3.1,<9.0.0)"]

[tool.poetry]
packages = [{ include = "i13c", from = "src" }]

[project.scripts]
i13c = "i13c.main:i13c"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
