[project]
name = "i13c-lang"
version = "0.0.0"
description = ""
authors = [{ name = "Adrian Macal", email = "adma@amacal.pl" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["click (>=8.3.1,<9.0.0)"]

[tool.poetry]
packages = [{ include = "i13c", from = "src" }]

[project.scripts]
i13c = "i13c.cli:i13c"

[build-system]
requires = ["poetry-core==2.2.1"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
]

[tool.isort]
profile = "black"
